# EmbarcaTech

./: Lista_exercicio_cap123.docx  test.py  unidade4.c
Estudo de C/ch01-essential-features/: test
Estudo de C/ch03-object-files/: CMakeLists.txt
Estudo_C/ch01-essential-features/: ExtremeC_examples_chapter1_2.c
Estudo_C/ch02-compilation-and-linking/: CMakeLists.txt  ExtremeC_examples_chapter2_4_main.c  test
Estudo_C/ch11-system-calls-and-kernel/ex11_3/: hwkm.c
Estudo_C/ch12-the-most-recent-c/: ExtremeC_examples_chapter12_2.c
Estudo_C/ch22-unit-testing-and-debugging/: CMakeLists.txt  ExtremeC_examples_chapter22_1_main.c
Uni7Marcelo/: CMakeLists.txt
unidade7-1/: CMakeLists.txt  font.c  hsync.pio  mandelbrot_fixvfloat.c  pico_sdk_import.cmake  rgb.pio  rp2040_v1.h  vga_graphics.c  vga_graphics.h  vsync.pio
